--- a/css/style.css
+++ b/css/style.css
@@ -254,3 +254,39 @@ footer {
 .content.active {
   margin-left: 0;
 }
+
+@media (max-width: 768px) {
+  body {
+    margin: 10px;
+  }
+
+  section {
+    width: 90%;
+    margin-left: 5%;
+  }
+
+  .fixed-header {
+    padding: 10px;
+  }
+
+  .sidebar {
+    width: 0;
+  }
+
+  .menu-btn {
+    display: block;
+  }
+  .nav-list {
+    display: none;
+    background-color: #333;
+    position: fixed;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+  }
+  .nav-list.active {
+    display: block;
+  }
+}
