--- a/css/style.css
+++ b/css/style.css
@@ -1,292 +1,114 @@
 
-body, h1, h2, h3, p, ul, li {
+@charset "UTF-8";
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-  background-image: url("../image/434004.jpg");
-  color: white;
-  margin: 20px;
-  background-size:cover;
-  background-repeat: no-repeat;  
-  background-attachment: fixed;
-  text-shadow: -1px -1px 0 #000,1px -1px 0 #000, -1px  1px 0 #000, 1px  1px 0 #000;
-}
-#back-to-top-button {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  display: none;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 10px;
-  cursor: pointer;
-  border-radius: 50%; /* Rendi il pulsante rotondo */
-  width: 60px;
-  height: 60px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.arrow-up {
-  width: 0;
-  height: 0;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-bottom: 12px solid #fff; /* Freccia al centro */
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-#back-to-top-button:hover {
-  background-color: #0056b3;
-}
-
-::-webkit-scrollbar {
-  width: 10px; 
-  background: rgb(31, 34, 44);
-}
-::-webkit-scrollbar-thumb {
-  background: #888; 
-  border-radius: 5px; 
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #555; 
-}
-
-.name{
-  text-align: center;
-  color:white;
-  text-shadow: -1px -1px 0 #000,1px -1px 0 #000, -1px  1px 0 #000, 1px  1px 0 #000;
-  padding-top: 20%;
-  height: 600px;
-  font-size: 30px;
-  font: italic;
+  min-height: 300vh;
+  background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+  font-size: 20px;  
+  overflow-x: hidden;
 }
 #informazioni_personali {
-  display: flex; /* Imposta il contenitore come un flex container */
-  align-items: center; /* Allinea verticalmente al centro */
+  display: flex; 
+  align-items: center; 
+  
+}
+::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
 }
 
 #informazioni_personali img {
-  max-width: 300px; /* Imposta la larghezza massima dell'immagine */
+  max-width: 300px;
   margin-right: 20px; 
   border-radius: 20%;
 }
-.fixed-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: rgba(73, 73, 73, 0.4);
-  color: #fff;
-  text-shadow: -1px -1px 0 #000,1px -1px 0 #000, -1px  1px 0 #000, 1px  1px 0 #000;
-  opacity: 1; /* Imposta l'opacità iniziale a 1 */
-  transition: opacity 0.3s ease-in-out;
- 
-}
-.fixed-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  color: #fff;
-  opacity: 1; /* Imposta l'opacità iniziale a 1 */
-  transition: opacity 0.3s ease-in-out; /* Aggiungi una transizione all'opacità */
-}
 
-.fixed-header.hidden {
-  opacity: 0; /* Opacità quando l'header scompare */
+#competenze {
+  flex-direction: column;
 }
-.nav-list {
-  list-style: none;
-  display: flex;
-  padding: 0;
-  margin: 5px;
-  justify-content: flex-end; /* Allinea gli elementi a destra */
-}
-
-.nav-list li {
-  margin-left: 20px; /* Spaziatura a sinistra tra gli elementi */
-}
-
-.nav-list li:first-child {
-  margin-left: auto; /* Allinea il primo elemento a sinistra */
-}
-
-.nav-list a {
-  text-decoration: none;
-  color: #fff;
-  transition: color 0.3s ease-in-out;
-}
-
-.nav-list a:hover {
-  color: #ff9900;
-}
-
-
-section {
-  padding: 20px;
-  margin-bottom: 20px;
-  color:#f2f2f2;
-  background-color: rgba(50, 72, 108, 0.4);/*0.4*/
-  border-radius: 10%;
-  width: 40%;
-  
-  margin-left: 30%;
-
-}
-section h2 {
-  font-size: 24px;
-}
-
-ul {
-  list-style-type: disc;
-  margin-left: 20px;
-}
-
-a {
-  color: #007bff;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-footer {
+#competenze h1 {
   text-align: center;
-  padding: 10px;
-  background-color: #333;
+  margin-top: 0px;
+}
+
+content section {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1em;
+  letter-spacing: 2pt;
   color: #fff;
 }
 
-
-#position-indicator {
-  text-align: center;
-  margin-top: 10px;
-}
-#esperienze-container {
-  display: flex;
-  transition: transform 1s ease-in-out; /* Aggiungi una transizione per la proprietà "transform" */
-  overflow: hidden; /* Assicurati che il contenuto in eccesso venga nascosto durante la transizione */
-}
-
-.position-dot {
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  background-color: #ccc;
-  border-radius: 50%;
-  margin: 0 5px;
-  cursor: pointer;
-}
-
-.position-dot.active {
-  background-color: #007bff;
-}
-
-.menu-btn {
+nav {
   position: fixed;
-  top: 5px;
-  left: 20px;
-  cursor: pointer;
-  z-index: 2;
-}
-
-.bar {
-  width: 25px;
-  height: 3px;
-  background-color: #6f6f6f;
-  margin: 5px 0;
-  transition: 0.4s;
-}
-
-.sidebar {
+  width: 100%;
   height: 100%;
-  width: 0;
-  position: fixed;
   top: 0;
   left: 0;
-  background-color: #333;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
 }
-
-.sidebar ul {
+nav ul {
   list-style: none;
-  padding: 0;
 }
-
-.sidebar ul li {
-  padding: 15px;
-  text-align: center;
+nav ul li {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 2;
+  letter-spacing: 1pt;
+  font-size: 2em;
+  color: #09203f;
+  animation: fadeDown 0.5s forwards;
+  opacity: 0;
+  cursor: pointer;
+  transform: translateY(-20px);
+  transition: all 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
-
-.sidebar ul li a {
-  color: white;
-  text-decoration: none;
-  display: block;
-  transition: 0.3s;
+nav ul li:hover {
+  text-shadow: 2px 1px 40px rgba(0, 0, 0, 0.5);
+  opacity: 0.8;
 }
-
-.sidebar ul li a:hover {
-  background-color: #555;
+nav ul li:nth-child(1) {
+  animation-delay: 0.8s;
 }
-
-.content {
-  margin-left: 250px;
-  padding: 15px;
-  transition: 0.5s;
+nav ul li:nth-child(2) {
+  animation-delay: 0.9s;
 }
-
-.sidebar.active {
-  width: 250px;
+nav ul li:nth-child(3) {
+  animation-delay: 1s;
 }
-
-.content.active {
-  margin-left: 0;
+nav #nav-close {
+  position: fixed;
+  top: 40px;
+  right: 40px;
+  font-size: 1.5em;
+  cursor: pointer;
+  animation: fadeDown 0.5s forwards;
+  animation-delay: 1.1s;
+  opacity: 0;
+  color: #09203f;
+  transform: translateY(-20px);
 }
-
-@media (max-width: 768px) {
-  body {
-    margin: 10px;
+@keyframes fadeDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
   }
-
-  section {
-    width: 90%;
-    margin-left: 5%;
-  }
-
-  .fixed-header {
-    padding: 10px;
-  }
-
-  .sidebar {
-    width: 0;
-  }
-
-  .menu-btn {
-    display: block;
-  }
-  .nav-list {
-    display: none;
-    background-color: #333;
-    position: fixed;
-    top: 60px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-  }
-  .nav-list.active {
-    display: block;
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
