--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,15 @@ nav ul li:nth-child(2) {
 nav ul li:nth-child(3) {
   animation-delay: 1s;
 }
+nav ul li:nth-child(4) {
+  animation-delay: 1.1s;
+}
+nav ul li:nth-child(5) {
+  animation-delay: 1.2s;
+}
+nav ul li:nth-child(6) {
+  animation-delay: 1.3s;
+}
 nav #nav-close {
   position: fixed;
   top: 40px;
