--- a/css/style.css
+++ b/css/style.css
@@ -121,3 +121,20 @@ nav #nav-close {
     transform: translateY(0);
   }
 }
+#video-container {
+  display: none;
+}
+section #mani{
+  display: flex; 
+  flex-direction: column;
+}
+.python-button {
+  font-family:"Montserrat", "sans-serif";
+  background-color: transparent;
+  color: white; 
+  padding: 10px 20px; 
+  border: 3px;
+  border-color: white;
+  border-radius: 5px;
+  position: relative;
+}
