--- a/css/carousel.css
+++ b/css/carousel.css
@@ -111,3 +111,70 @@
     transform: translate3d(-1px, 0, -40px) rotateY(90deg);
     transform-origin: 100%;
   }
+  @media screen and (max-width: 1000px) {    
+    #esperienze {
+      flex-direction: column;
+      height: 75vh;
+    }   
+    .carousel {
+      position: relative;
+      display: block;
+      width: 100%;
+      box-sizing: border-box;
+
+    }.carousel__body .carousel__slider__item .item__3d-frame {
+      position: relative;
+      width: 100%;
+      height: 80%;
+      transition: transform 1s ease-in-out;
+      -webkit-transform-style: preserve-3d;
+      transform-style: preserve-3d;
+    }
+    .carousel__body .carousel__slider__item .item__3d-frame:after {
+      content: "";
+      position: absolute;
+      bottom: -15%;
+      width: 100%;
+      height: 40px;
+      background: var(--box-shadow);
+      box-shadow: 0px 0px 5px 5px var(--box-shadow);
+      transform: rotateX(90deg) translate3d(0px, -20px, 0px);
+      opacity: 0.85;
+    }
+    .carousel__body .carousel__slider__item .item__3d-frame__box {
+      display: flex;
+      align-items: center;
+      vertical-align: middle;
+      text-align: center;
+      position: absolute;
+      width: 100%;
+      height: 80%;
+      box-sizing: border-box;
+      border-color: var(--box-border);
+      background: var(--box-bg);
+      border-width: 3px;
+      border-style: solid;
+    }
+    .carousel__body .carousel__slider__item .item__3d-frame__box h1 {
+      font-size: 7em;
+      width: 100%;
+      color: var(--box-border);
+    }
+    .carousel__body .carousel__slider__item .item__3d-frame__box--right, .carousel__body .carousel__slider__item .item__3d-frame__box--left {
+      top: 0;
+      width: 40px;
+      backface-visibility: hidden;
+    }
+    .carousel__body .carousel__slider__item .item__3d-frame__box--left {
+      left: 0;
+      border-left-width: 5px;
+      transform: translate3d(1px, 0, -40px) rotateY(-90deg);
+      transform-origin: 0%;
+    }
+    .carousel__body .carousel__slider__item .item__3d-frame__box--right {
+      right: 0;
+      border-right-width: 5px;
+      transform: translate3d(-1px, 0, -40px) rotateY(90deg);
+      transform-origin: 100%;
+    }
+  }
