--- a/css/style.css
+++ b/css/style.css
@@ -138,3 +138,51 @@ section #mani{
   border-radius: 5px;
   position: relative;
 }
+/* Your existing CSS */
+
+@media screen and (max-width: 1000px) {
+  body {
+    font-size: 16px;
+  }
+  content section {
+    height: 60vh;
+  }
+  #informazioni_personale{
+    margin-left:6%;
+  }
+  #competenze h1 {
+    text-align: center; 
+  }
+  #mani{
+    text-align: center; 
+  }
+  #cert div{ 
+    flex-direction: column;
+  }
+  #cert img {
+    max-width: 400px;
+  }
+  nav {
+    display: block; 
+  }
+  nav ul li {
+    font-size: 1.5em; 
+    line-height: 1.5;
+    text-align: center; 
+    margin: 10px 0;
+    opacity: 1; 
+    transform: translateY(0);
+  }
+  nav #nav-close {
+    display: block; 
+  }
+  #video-container {
+    display: block;
+  }
+  section #mani {
+    text-align: center;
+  }
+  .python-button {
+    margin: 10px auto;
+  }
+}
