--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,16 @@ section #mani{
   border-radius: 5px;
   position: relative;
 }
+.certificate-button {
+  font-family:"Montserrat", "sans-serif";
+  background-color: transparent;
+  color: white; 
+  padding: 10px 20px; 
+  border: 3px;
+  border-color: white;
+  border-radius: 5px;
+  position: relative;
+}
 /* Your existing CSS */
 
 @media screen and (max-width: 1000px) {
@@ -183,6 +193,9 @@ section #mani{
     text-align: center;
   }
   .python-button {
+    margin: 10px auto;
+  }
+  .certificate-button {
     margin: 10px auto;
   }
 }
